--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -23,7 +23,7 @@
 
   .tab {
     bottom: 1px;
-    color: $text-grey;
+    color: $text-gray;
     display: inline-block;
     line-height: 50px;
     margin: 0;
