--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -115,10 +115,10 @@ a {
   }
 }
 
-.text-grey,
-a.text-grey,
-button.text-grey {
-  color: $text-grey;
+.text-gray,
+a.text-gray,
+button.text-gray {
+  color: $text-gray;
 }
 
 // Styles
