--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -2,7 +2,6 @@
 * FORMS
 */
 
-
 // prevent input default appearence on webkit
 input,
 textarea {
@@ -60,10 +59,8 @@ textarea {
   font-weight: normal;
   margin-bottom: 20px;
 
-
   :focus {
     outline: none;
-
   }
 
   &.error {
@@ -86,12 +83,12 @@ textarea {
   }
 }
 
-// temporally used in mobonaut checkout
+// Specific selector for mobonaut checkout. Must delete ASAP.
 .has-error .control-label {
   color:$brand-primary;
 }
 
-// Error handling in mobonaut checkout
+// Specific selector for error handling in mobonaut checkout. Must delete ASAP.
 label.error {
   color: $color-error;
   font-size: 13px;
@@ -108,7 +105,6 @@ input[type=checkbox] {
 input[type=radio] {
   appearance: radio;
 }
-
 
 // Select
 .select {
@@ -165,7 +161,6 @@ input[type=radio] {
     position: relative;
     width: 100%;
     z-index: 2;
-    appearance: none;
 
     @include breakpoint(bp-medium) {
       padding: 8px 15px;
@@ -179,7 +174,7 @@ input[type=radio] {
     }
 
     &:active + i,
-    &:focus + i{
+    &:focus + i {
       z-index:2;
     }
 
@@ -253,13 +248,13 @@ textarea {
 *   Checkbox and Radio buttons
 *
 *  <div class="radio">
-*    <input id="name{{$i}}" name="holaquetal" type="radio" value=""/>
-*    <label for="name{{$i}}" >option {{$i}}</label>
+*    <input id="hello" name="hello" type="radio" value=""/>
+*    <label for="hello" >option 1</label>
 *  </div>
 *
 *  <div class="checkbox">
-*    <input id="name{{$i}}" name="keywords" type="checkbox" value=""/>
-*    <label for="name{{$i}}">option {{$i}}</label>
+*    <input id="goodbye" name="goodbye" type="checkbox" value=""/>
+*    <label for="goodbye">option {{$i}}</label>
 *  </div>
 *
 **/
@@ -340,24 +335,26 @@ input[type=radio] + label:before {
 }
 
 input[type=checkbox]:checked + label,
-input[type=radio]:checked + label{
+input[type=radio]:checked + label {
   color: $brand-primary;
 }
 
 input[type=checkbox]:checked + label:before,
-input[type=radio]:checked + label:before{
-  animation: radioAndCheckboxAnimation .250s;
-  transform: scale(1);
+input[type=radio]:checked + label:before {
+  animation: radioAndCheckboxAnimation .25s;
   color: $brand-primary;
+  transform: scale(1);
 }
 
 @keyframes radioAndCheckboxAnimation {
   0% {
     transform: scale(0);
   }
+
   50% {
     transform: scale(1.5);
   }
+
   100% {
     transform: scale(1);
   }
