fix formatting on code and comments

--- a/src/scss/_background-colors.scss
+++ b/src/scss/_background-colors.scss
@@ -1,6 +1,7 @@
 /**
- *  Background colors
+ *  BACKGROUND COLORS
  */
+
 .background {
   @each $type, $color in $background-color-map {
     &-#{$type} {
