--- a/src/scss/_badges.scss
+++ b/src/scss/_badges.scss
@@ -1,8 +1,8 @@
 /**
- * Badges
+ *  BADGES
  *
- * Markdown:
- * ---------
+ *  Markup:
+ *  -------
  *
  *  <ul class="badges-list">
  *    <li class="badges-list-item badge-primary">Badge 1</li>
