--- a/src/scss/_loading-bar.scss
+++ b/src/scss/_loading-bar.scss
@@ -1,11 +1,11 @@
 /**
-* Loading bar
-*
-* Markdown:
-* ---------
-* <div class="loading-bar"></div>
-*
-*/
+ *  LOADING BAR
+ *
+ *  Markup:
+ *  ---------
+ *  <div class="loading-bar"></div>
+ *
+ */
 
 .loading-bar {
   height: 4px;
