--- a/src/scss/_paginator.scss
+++ b/src/scss/_paginator.scss
@@ -1,6 +1,27 @@
 /**
-* PAGINATOR
-*/
+ *  PAGINATOR
+ *
+ *  Markup:
+ *  -------
+ *
+ *  <ul class="paginator-list">
+ *    <li class="paginator-list-item">
+ *      <a href="#" class="paginator-list-link">Prev</a>
+ *    </li>
+ *    <li class="paginator-list-item">
+ *      <a href="#" class="paginator-list-link">1</a>
+ *    </li>
+ *    <li class="paginator-list-item">
+ *      <a href="#" class="paginator-list-link active">2</a>
+ *    </li>
+ *    <li class="paginator-list-item">
+ *      <a href="#" class="paginator-list-link">3</a>
+ *    </li>
+ *    <li class="paginator-list-item">
+ *      <a href="#" class="paginator-list-link">Next</a>
+ *    </li>
+ *  </ul>
+ */
 
 .paginator-list {
 
