--- a/src/scss/_message-bars.scss
+++ b/src/scss/_message-bars.scss
@@ -1,15 +1,15 @@
 /**
-* MESSAGES
-*
-* Markdown:
-* ---------
-*
-*  <div class="message-bar background-sucess">Success message</div>
-*  <div class="message-bar background-info">Success info</div>
-*  <div class="message-bar background-error">Success error</div>
-*  <div class="message-bar background-warning">Success warning</div>
-*
-*/
+ *  MESSAGE BARS
+ *
+ *  Markup:
+ *  -------
+ *
+ *  <div class="message-bar background-sucess">Success message</div>
+ *  <div class="message-bar background-info">Success info</div>
+ *  <div class="message-bar background-error">Success error</div>
+ *  <div class="message-bar background-warning">Success warning</div>
+ *
+ */
 
 .message-bar {
   border-radius: $radius;
