--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -106,7 +106,7 @@ button {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      max-width: 320px;
+      max-width: $container-small-maxwidth;
       width: 100%;
     }
   }
