add alignment helpers

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -81,10 +81,15 @@
   text-align: left;
 }
 
-// Deprecated. Use flexbox instead.
+
+.align-bottom {
+  vertical-align: bottom;
+}
 .align-middle {
-  display: table-cell;
   vertical-align: middle;
+}
+.align-top {
+  vertical-align: top;
 }
 
 
