Change light version variables

--- a/src/_variables.light.scss
+++ b/src/_variables.light.scss
@@ -6,9 +6,9 @@
  */
 
 // Brand colors
-$brand-primary:         #1abc9c;
-$brand-secondary:       #9b59b6;
-$brand-dark:            #18232f;
+$brand-primary:         #3498db;
+$brand-secondary:       #2ecc71;
+$brand-dark:            #18537a;
 $brand-light:           #f1f1f1;
 
 $color-success:         #4caf50;
