fix large icons on buttons

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -198,6 +198,11 @@ button {
     &::before {
       float: left;
     }
+
+    // fix vertical position on large icons
+    &.fa-lg{
+      margin-bottom: 0;
+    }
   }
 }
 
