--- a/src/scss/_paginator.scss
+++ b/src/scss/_paginator.scss
@@ -44,6 +44,7 @@
 
     .paginator-list-link {
       background-color: $paginator-item-bg;
+      border: 1px solid $paginator-item-border;
       border-radius: $paginator-item-radius;
       color: $paginator-item-color;
       display: block;
