--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -106,8 +106,12 @@
   display: block;
 }
 
-.word-break{
+.word-break {
   word-break: break-all;
+}
+
+.text-indent {
+  padding-left: $gutterwidth;
 }
 
 
