add relative state to loading spinner

--- a/src/scss/_loading-spinner.scss
+++ b/src/scss/_loading-spinner.scss
@@ -59,6 +59,14 @@
       left: 0;
     }
   }
+
+  &.is-relative {
+    display: inline-block;
+    left: auto;
+    margin: 0;
+    position: relative;
+    top: auto;
+  }
 }
 
 @keyframes rotateLoader {
