Remove text-small margins

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -41,7 +41,7 @@ a {
 
 // titles commons
 .text {
-  &-huge, &-big, &-medium, &-small {
+  &-huge, &-big, &-medium {
     line-height: 1.3em;
     margin-bottom: 1em;
     margin-top: 1.5em;
