Fix Badge Color Warning (#34)
* Compiler warned about color name possibly interpolating to hex. In this particular situation, it probably wouldn't have happened, but we should rename the key nonetheless to get rid of the warnings.

* Compiler warned about color name possibly interpolating to hex. In this particular situation, it probably wouldn't have happened, but we should rename the key nonetheless to get rid of the warnings.

* Update _variables.scss

Just a minor format change.

* Update _variables.light.scss

Just a minor format change.

--- a/src/_variables.light.scss
+++ b/src/_variables.light.scss
@@ -184,7 +184,7 @@ $badges-color-map: (
   primary:              $brand-primary,
   secondary:            $brand-secondary,
   dark:                 $brand-dark,
-  gray:                 $gray,
+  light:                $gray,
   success:              $color-success,
   error:                $color-error,
   warning:              $color-warning
