--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -3,5 +3,28 @@
 // Init variables
 @import 'variables';
 
-// Add library
-@import 'library';
+// Library
+@import 'scss/utils/mixins';
+@import 'scss/placeholders';
+@import 'scss/vendor/reset';
+
+@import 'scss/main';
+
+@import 'scss/background-colors';
+@import 'scss/badges';
+@import 'scss/buttons';
+@import 'scss/forms';
+@import 'scss/helpers';
+@import 'scss/layout';
+@import 'scss/loading-bar';
+@import 'scss/loading-spinner';
+@import 'scss/message-bars';
+@import 'scss/paginator';
+@import 'scss/rating-circle';
+@import 'scss/tables';
+@import 'scss/tabs';
+@import 'scss/tags';
+@import 'scss/typography';
+
+// Twitter bootstrap's grid. More info: https://getbootstrap.com/examples/grid/
+@import 'scss/bootstrapgrid';
