--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,6 +5,8 @@
  *
  */
 
+$enable-grid-classes: true;
+
 // Brand colors
 $brand-primary:         #1abc9c;
 $brand-secondary:       #9b59b6;
@@ -76,78 +78,41 @@ $radius:                    3px;
 $border-box:                true;
 
 
-/**
- *  MEDIA QUERIES BREAKPOINTS
- */
-
-// Extra small screen / phone
-//** Deprecated `@screen-xs` as of v3.0.1
-$screen-xs:                  480px;
-//** Deprecated `$screen-xs-min` as of v3.2.0
-$screen-xs-min:              $screen-xs;
-//** Deprecated `$screen-phone` as of v3.0.1
-$screen-phone:               $screen-xs-min;
-
-// Small screen / tablet
-//** Deprecated `$screen-sm` as of v3.0.1
-$screen-sm:                  768px;
-$screen-sm-min:              $screen-sm;
-//** Deprecated `$screen-tablet` as of v3.0.1
-$screen-tablet:              $screen-sm-min;
-
-// Medium screen / desktop
-//** Deprecated `$screen-md` as of v3.0.1
-$screen-md:                  992px;
-$screen-md-min:              $screen-md;
-//** Deprecated `$screen-desktop` as of v3.0.1
-$screen-desktop:             $screen-md-min;
-
-// Large screen / wide desktop
-//** Deprecated `$screen-lg` as of v3.0.1
-$screen-lg:                  1280px;
-$screen-lg-min:              $screen-lg;
-//** Deprecated `$screen-lg-desktop` as of v3.0.1
-$screen-lg-desktop:          $screen-lg-min;
-
-// So media queries don't overlap when required, provide a maximum
-$screen-xs-max:              ($screen-sm-min - 1);
-$screen-sm-max:              ($screen-md-min - 1);
-$screen-md-max:              ($screen-lg-min - 1);
-
 
 /**
- *  BOOTSTRAP GRID SYSTEM CONFIG
+ *  GRID
  */
 
-// Number of columns in the grid.
-$grid-columns:              12;
+// Grid breakpoints
 
-// Padding between columns. Gets divided in half for the left and right.
-$grid-gutter-width:         30px;
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
 
-// Navbar collapse (point at which the navbar becomes uncollapsed.)
-$grid-float-breakpoint:     $screen-sm-min;
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
 
-//** Point at which the navbar begins collapsing.
-$grid-float-breakpoint-max: ($grid-float-breakpoint - 1);
+$grid-columns:                12 !default;
+$grid-gutter-width:           30px !default;
 
 
-// CAUTION: This container sizes are deprecated. Use $container-maxwidth instead.
 
-// Small screen / tablet
-$container-tablet:             auto; // (720px + $grid-gutter-width);
-//** For `$screen-sm-min` and up.
-$container-sm:                 auto; // $container-tablet;
+// Grid containers
+//
+// Define the maximum width of `.container` for different screen sizes.
 
-// Medium screen / desktop
-$container-desktop:            auto; // (940px + $grid-gutter-width);
-//** For `$screen-md-min` and up.
-$container-md:                 auto; // $container-desktop;
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+) !default;
 
-// Large screen / wide desktop
-$container-large-desktop:      (1140px + $grid-gutter-width);
-//** For `$screen-lg-min` and up.
-$container-lg:                 $container-large-desktop;
 
 
 /**
