--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -23,8 +23,10 @@
 @import 'scss/paginator';
 @import 'scss/tables';
 @import 'scss/tabs';
-@import 'scss/tags';
 @import 'scss/typography';
+
+// Components
+@import 'scss/components/tag';
 
 // Twitter bootstrap's grid v4.1.0
 // More info: https://getbootstrap.com/examples/grid/
