--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -17,7 +17,6 @@
 @import 'scss/forms';
 @import 'scss/helpers';
 @import 'scss/layout';
-@import 'scss/loading-bar';
 @import 'scss/loading-spinner';
 @import 'scss/message-bars';
 @import 'scss/paginator';
@@ -26,6 +25,7 @@
 @import 'scss/typography';
 
 // Components
+@import 'scss/components/loading-bar';
 @import 'scss/components/tag';
 
 // Twitter bootstrap's grid v4.1.0
