--- a/src/scss/components/_loading-bar.scss
+++ b/src/scss/components/_loading-bar.scss
@@ -3,11 +3,11 @@
  *
  *  Markup:
  *  ---------
- *  <div class="loading-bar"></div>
+ *  <div class="loadingBar"></div>
  *
  */
 
-.loading-bar {
+.loadingBar {
   height: $h-loading-bar;
   left: 0;
   overflow: hidden;
