--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -133,8 +133,13 @@ $background-color-map: (
 );
 
 // Badges
-$badge-color:           $text-body;
-$badge-bg:              $brand-light;
+$c-badge: $text-body !default;
+$bg-badge: $brand-light !default;
+$bdr-badge: $bdr-m !default;
+$lh-badge: 1.2em !default;
+$p-badge: .2em .7em !default;
+$fz-badge-lg: 1.3em !default;
+$fz-badge-xs: .7em !default;
 $badges-color-map: (
   primary:              $brand-primary,
   secondary:            $brand-secondary,
@@ -143,7 +148,7 @@ $badges-color-map: (
   success:              $color-success,
   error:                $color-error,
   warning:              $color-warning
-);
+) !default;
 
 // Buttons
 $button-bg-color:       #64829f; // default color for buttons
