adjust tabs component

--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -19,14 +19,14 @@
 @import 'scss/message-bars';
 @import 'scss/paginator';
 @import 'scss/tables';
-@import 'scss/tabs';
 @import 'scss/typography';
 
 // Components
 @import 'scss/components/badge';
-@import 'scss/components/tag';
 @import 'scss/components/loading-bar';
 @import 'scss/components/loading-spinner';
+@import 'scss/components/tabs';
+@import 'scss/components/tag';
 
 // Twitter bootstrap's grid v4.1.0
 // More info: https://getbootstrap.com/examples/grid/
