--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -211,33 +211,16 @@ $paginator-item-border:       $body-bg;         // only for compact paginator
 $paginator-item-active-bg:    $brand-primary;
 $paginator-item-active-color: $text-body;
 
-// Rating circle
-$rating-bg:                   $brand-light;
-
-// Rating colors
-$rating1:     #dd2c00;
-$rating2:     #ff5722;
-$rating3:     #ff9800;
-$rating4:     #ffc107;
-$rating5:     #f5dc00;
-$rating6:     #cddc39;
-$rating7:     #8bc34a;
-$rating8:     #4caf50;
-$rating9:     #43a047;
-$rating10:    #388e3c;
-
-$background-color-map: map-merge($background-color-map, (
-  rating1:    $rating1,
-  rating2:    $rating2,
-  rating3:    $rating3,
-  rating4:    $rating4,
-  rating5:    $rating5,
-  rating6:    $rating6,
-  rating7:    $rating7,
-  rating8:    $rating8,
-  rating9:    $rating9,
-  rating10:   $rating10
-));
+// Tabs
+$bdb-tabs-item-selected: 3px solid $brand-primary !default;
+$bdb-tabs-item: 3px solid transparent !default;
+$bdb-tabs: 1px solid $border-color !default;
+$c-tabs-item-hover: $brand-primary !default;
+$c-tabs-item-selected: $brand-primary !default;
+$c-tabs-item: $text-gray !default;
+$m-tabs-item: 0 30px 0 0 !default;
+$miw-tabs-item: 70px !default;
+$p-tabs-item: 15px !default;
 
 // Tables
 $table-bg-color:        $brand-light;
