--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -17,7 +17,6 @@
 @import 'scss/helpers';
 @import 'scss/layout';
 @import 'scss/message-bars';
-@import 'scss/paginator';
 @import 'scss/tables';
 @import 'scss/typography';
 
@@ -25,6 +24,7 @@
 @import 'scss/components/badge';
 @import 'scss/components/loading-bar';
 @import 'scss/components/loading-spinner';
+@import 'scss/components/paginator';
 @import 'scss/components/tabs';
 @import 'scss/components/tag';
 
